# mke

./: .hgtags  CMakeLists.txt  CTestConfig.cmake  Doxyfile  LICENSE.txt  TODO  astylerc  baroclin_operator.mw  barotrop_operator.mw  coordinates.mw  footer.html  gmres.c  gmres.h  icosahedron.cpp  laplace.cpp  laplace.h  llvm.sh  mke.cpp  mke.h  polynom.cpp  polynom.h  settings.cmake.clang-example  sphere.mw  sphere_laplace.cpp  test_funcgen.cpp  test_gmres.cpp  test_integrate.cpp  test_laplace.cpp  test_polynom.cpp  test_slaplace.cpp  torus.mw  util.h
aux/: CMakeLists.txt  barvortex.cpp  barvortex.h  jacobian.cpp  laplace.h
auxiliary/: CMakeLists.txt  baroclin.cpp  baroclin.h  barvortex.cpp  barvortex.h  chafe.cpp  chafe.h  jacobian.cpp  jacobian.h  laplace.cpp  laplace.h  laplace_private.h  norm.h  schafe.cpp  schafe.h  sjacobian.cpp  sjacobian.h  slaplace.cpp  slaplace.h  sphere_laplace.cpp
auxiliary/impl/: barvortex_impl.h  chafe_impl.h  laplace_impl.h  schafe_impl.h  slaplace_impl.h  sphere_laplace_impl.h
cmake/: Bison.cmake  Common.cmake  CommonDefinitions.cmake  FindBison.cmake  FindCuda.cmake  FindFortran.cmake  FindMath.cmake  FindNETCDF.cmake  FindSelfSuperLU.cmake  FindSelfUmfPack.cmake  FindUmfPack.cmake  Testing.cmake
contrib/: CMakeLists.txt
contrib/blas/: CMakeLists.txt  CMakeLists.txt.orig
contrib/superlu/: CMakeLists.txt  README.txt
contrib/superlu_mt/: CMakeLists.txt
contrib/umfpack/: CMakeLists.txt  README
cuda/: gmres.cu  utils.cu
docs/: hemisphere.eps  icosahedron.eps  paper.tex  paper_1251.tex  test.eps
examples/: CMakeLists.txt  baroclin.cpp  baroclin.h  barvortex.h  barvortex_impl.h  chafe.cpp  chafe.h  chafe_impl.h  schafe.cpp  schafe.h  schafe_impl.h  test_baroclin.cpp  test_barvortex.cpp  test_chafe.cpp  test_deriv.cpp  test_jacobian.cpp  test_laplace.cpp  test_laplace1d.cpp  test_new_slaplace.cpp  test_schafe.cpp  test_slaplace.cpp  test_system_laplace.cpp
scripts/: baroclin_to_psql.pl  barvortex_to_psql.pl  test_barvortex.lua  test_jacobian.lua  test_laplace.lua  test_scale.py  test_slaplace.lua  test_system_laplace.lua
src/: CMakeLists.txt  alloc_cu.h  base.h  check_fpu.c  cnk.c  cnk_6.h  deriv.h  func.cpp  func.h  generators.cpp  generators.h  gmres.c  gmres.h  jacobian.cpp  jacobian.h  laplace.cpp  laplace.h  linal.cpp  linal.cu  linal.h  linal_base.cpp  linal_cuda.cpp  linal_cuda.h  mesh.cpp  mesh.h  mke.cpp  mke.h  mke_generators.h  mke_private.h  norm.h  phelm.cpp  phelm.cu  phelm.h  phelm_base.h  phelm_generators.h  phelm_la.h  phelm_private.h  point.cpp  point.h  polynom.cpp  (+18 more)
src/gpu/: gmres.cu  linal.cu  linal_cuda.cpp  linal_cuda.h  phelm.cu  proj_cuda.cpp  reduction.h  texture.h
src/impl/: deriv_impl.h  generators_impl.h  laplace_impl.h  slaplace_impl.h  solver_impl.h  solver_superlu.h  solver_umfpack.h
tests/: CMakeLists.txt  baroclin.cpp  baroclin.h  barvortex.cpp  barvortex.h  jacobian.cpp  jacobian.h  laplace.cpp  laplace.h  sphere_laplace.cpp  test_baroclin.cpp  test_barvortex.cpp  test_chafe.cpp  test_diff.cpp  test_func_op.cpp  test_funcgen.cpp  test_gmres.cpp  test_gpu_reduction.cpp  test_integrate.cpp  test_laplace.cpp  test_polynom.cpp  test_quadrature.c  test_schafe.cpp  test_slaplace.cpp  test_solver.cpp  test_triag_rotate.cpp
utils/: CMakeLists.txt  analizer.cpp  dump_operator_matrix.cpp  icosahedron.cpp  mesh_builder.cpp  mesh_builder.h  netcdf_cmd.h  netcdf_cmd.ypp  netcdf_cmd_lexer.cpp  netcdf_reader.cpp  rectangle.cpp  slowtype.cpp  srtm2mesh.cpp  strm2mesh.cpp  trap.pl
