cmake_minimum_required(VERSION 2.6.3)
project(phelm CXX C)

if (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR) # <- root project
set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(Common)
include(CTest)
include(Testing)
include(FindOpenMP)
include(FindMath)
include(FindFortran)
include(FindSelfUmfPack)
include(FindUmfPack)
include(CommonDefinitions)
include(Bison)
include(FindNETCDF)
endif (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)

add_subdirectory(contrib)
add_subdirectory(src)
add_subdirectory(auxiliary)
add_subdirectory(utils)
add_subdirectory(tests)
add_subdirectory(examples)

