project(phelm_examples CXX C)

set(EXECUTABLE_OUTPUT_PATH "../bin")
include_directories(../src ../auxiliary)
link_directories(../lib)

add_executable(test_laplace test_laplace.cpp)
add_executable(test_system_laplace test_system_laplace.cpp)
add_executable(test_slaplace test_slaplace.cpp)
add_executable(test_jacobian test_jacobian.cpp)
add_executable(test_schafe test_schafe.cpp)
add_executable(test_barvortex test_barvortex.cpp)
add_executable(test_baroclin test_baroclin.cpp)
add_executable(test_chafe test_chafe.cpp)

target_link_libraries(test_laplace phelm phelm_aux ${UMFPACK})
target_link_libraries(test_system_laplace phelm phelm_aux ${UMFPACK})
target_link_libraries(test_slaplace phelm phelm_aux ${UMFPACK})
target_link_libraries(test_jacobian phelm phelm_aux ${UMFPACK})
target_link_libraries(test_schafe phelm phelm_aux ${UMFPACK})
target_link_libraries(test_barvortex phelm phelm_aux ${UMFPACK})
target_link_libraries(test_baroclin phelm phelm_aux ${UMFPACK})
target_link_libraries(test_chafe phelm phelm_aux ${UMFPACK})

if (OPENMP_FOUND)
set_target_properties(test_laplace PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_system_laplace PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_slaplace PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_jacobian PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_schafe PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_barvortex PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_baroclin PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(test_chafe PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
endif (OPENMP_FOUND)
