project(utils CXX C)

if (NOT WIN32 AND BISON_FOUND)
	include_directories(/usr/include/netcdf-3)
	find_library(NETCDF netcdf HINTS /usr/lib /usr/lib64)
	if (NETCDF)
		set (BUILD_NETCDF 1)
	endif (NETCDF)
	message(STATUS "netcdf: ${NETCDF}")
endif (NOT WIN32 AND BISON_FOUND)

set(EXECUTABLE_OUTPUT_PATH "../bin")
add_executable(sphere icosahedron.cpp)
add_executable(rectangle rectangle.cpp)
add_executable(srtm2mesh srtm2mesh.cpp)
add_executable(analizer analizer.cpp)
if (BUILD_NETCDF)
	set (netcdf_source netcdf_reader.cpp)
	add_bison_files(netcdf_source netcdf_cmd.ypp)
	add_executable(netcdf_reader ${netcdf_source})
	target_link_libraries(netcdf_reader netcdf_c++ netcdf)
endif (BUILD_NETCDF)

if (OPENMP_FOUND)
set_target_properties(sphere PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(rectangle PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(srtm2mesh PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
set_target_properties(analizer PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
if (BUILD_NETCDF)
set_target_properties(netcdf_reader PROPERTIES LINK_FLAGS ${OpenMP_C_FLAGS})
endif (BUILD_NETCDF)
endif (OPENMP_FOUND)
